--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201709221814274_OverrideConventionForGigsAndGenres.Designer.cs">
       <DependentUpon>201709221814274_OverrideConventionForGigsAndGenres.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709221845152_PopulateGenresTable.cs" />
+    <Compile Include="Migrations\201709221845152_PopulateGenresTable.Designer.cs">
+      <DependentUpon>201709221845152_PopulateGenresTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -304,6 +308,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709221814274_OverrideConventionForGigsAndGenres.resx">
       <DependentUpon>201709221814274_OverrideConventionForGigsAndGenres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709221845152_PopulateGenresTable.resx">
+      <DependentUpon>201709221845152_PopulateGenresTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
