Add name to an Artist. Imported from Changeset 19

--- a/GigHub/GigHub/GigHub.csproj
+++ b/GigHub/GigHub/GigHub.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201709230705305_AddForeignKeyToPropertiesToGig.Designer.cs">
       <DependentUpon>201709230705305_AddForeignKeyToPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709250712032_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201709250712032_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201709250712032_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -236,6 +240,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
     <Compile Include="ViewModels\GigFormViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
     <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -328,6 +333,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709230705305_AddForeignKeyToPropertiesToGig.resx">
       <DependentUpon>201709230705305_AddForeignKeyToPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709250712032_AddNameToApplicationUser.resx">
+      <DependentUpon>201709250712032_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
